feat: Finalização da estrutura do crud de restaurante
