# src/main/java/com/fiap/ms/restaurante/entrypoints/controllers/RestauranteController.java
@@ -4,6 +4,8 @@ import com.fiap.ms.restaurante.application.usecase.restaurante.AtualizarRestaura
 import com.fiap.ms.restaurante.application.usecase.restaurante.BuscarRestauranteUseCase;
 import com.fiap.ms.restaurante.application.usecase.restaurante.DeletarRestauranteUseCase;
 import com.fiap.ms.restaurante.application.usecase.restaurante.InserirRestauranteUseCase;
+import com.fiap.ms.restaurante.domain.model.RestauranteDomain;
+import com.fiap.ms.restaurante.entrypoints.controllers.mappers.RestauranteDtoMapper;
 import com.fiap.ms.restauranteDomain.RestauranteApi;
 import com.fiap.ms.restauranteDomain.gen.model.RestauranteDto;
 import com.fiap.ms.restauranteDomain.gen.model.RestauranteRequestDto;
@@ -15,6 +17,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -38,26 +41,28 @@ public class RestauranteController implements RestauranteApi{
 
     @Override
     public ResponseEntity<RestauranteDto> _atualizarRestaurante(UUID id, RestauranteRequestDto restauranteRequestDto) {
+        var domain = RestauranteDtoMapper.INSTANCE.toDomain(restauranteRequestDto);
+        atualizarRestauranteUseCase.atualizar(id, domain);
         return ResponseEntity.noContent().build();
     }
 
     @Override
-    public ResponseEntity<RestauranteDto> _buscarRestaurantePorUsuario(UUID usuario) {
+    public ResponseEntity<List<RestauranteDto>> _buscarRestaurante(String nome, String endereco, String horarioFuncionamento) {
+        List<RestauranteDomain> domain = buscarRestauranteUseCase.buscar(nome, endereco, horarioFuncionamento);
+        List<RestauranteDto> dtos = domain.stream().map(RestauranteDtoMapper.INSTANCE::toRestauranteDto).collect(Collectors.toList());
         return ResponseEntity.noContent().build();
-    }
-
-    @Override
-    public ResponseEntity<Void> _criarRestaurante(RestauranteRequestDto restauranteRequestDto) {
-        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
     @Override
     public ResponseEntity<Void> _deletarRestaurante(UUID id) {
+        deletarRestauranteUseCase.deletar(id);
         return ResponseEntity.noContent().build();
     }
 
     @Override
-    public ResponseEntity<List<RestauranteDto>> _listarRestaurantes() {
-        return ResponseEntity.ok().build();
+    public ResponseEntity<Void> _inserirRestaurante(RestauranteRequestDto restauranteRequestDto) {
+        var domain = RestauranteDtoMapper.INSTANCE.toDomain(restauranteRequestDto);
+        inserirRestauranteUseCase.inserir(domain);
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 }
